# course_3

./: pyproject.toml
main/: func.py  main.py
tests/: test.py  test_func.py
