[tool.poetry]
name = "course-3-poetry"
version = "0.1.0"
description = ""
authors = ["Mikhail Belyaev <fiest4z@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
datetime = "^5.5"
pytest = "^8.2.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
